@@ -1,4 +1,4 @@
-# LIST OF CHANGES FROM LAST RELEASE:			<$Revision: 1.1613 $>
+# LIST OF CHANGES FROM LAST RELEASE:			<$Revision: 1.1614 $>
 #
 #
 # [Note: This file does not mention every change made to the NetBSD source tree.
@@ -1135,3 +1135,4 @@ Changes from NetBSD 5.0 to NetBSD 6.0:
 		D. McNeill.  [mrg 20111006]
 	GCC: Obsolete libgcc_pic.  [mrg 20111006]
 	zoneinfo: Import tzdata2011l. [apb 20111010]
+	sqlite: Import of pre-release of SQLite 3.6.9 [joerg 20111013]
